[gd_scene load_steps=19 format=3 uid="uid://bnegudfxgsw7c"]

[ext_resource type="Texture2D" uid="uid://cy1rsnp4uj4ks" path="res://Assets/Spells/SmallLightiningStrike.png" id="1_kcolf"]
[ext_resource type="Script" path="res://Scripts/Spells/Lightning_strike.gd" id="2_04k3x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jtd5d"]
atlas = ExtResource("1_kcolf")
region = Rect2(0, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gkbpg"]
atlas = ExtResource("1_kcolf")
region = Rect2(32, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv1el"]
atlas = ExtResource("1_kcolf")
region = Rect2(64, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1e7o"]
atlas = ExtResource("1_kcolf")
region = Rect2(96, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_prerj"]
atlas = ExtResource("1_kcolf")
region = Rect2(128, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4a0u"]
atlas = ExtResource("1_kcolf")
region = Rect2(160, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2uajj"]
atlas = ExtResource("1_kcolf")
region = Rect2(192, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_42p13"]
atlas = ExtResource("1_kcolf")
region = Rect2(224, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g7gd"]
atlas = ExtResource("1_kcolf")
region = Rect2(256, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7dlt"]
atlas = ExtResource("1_kcolf")
region = Rect2(288, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4wo57"]
atlas = ExtResource("1_kcolf")
region = Rect2(320, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wok22"]
atlas = ExtResource("1_kcolf")
region = Rect2(352, 0, 32, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urqc5"]
atlas = ExtResource("1_kcolf")
region = Rect2(384, 0, 32, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_q0dpt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtd5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gkbpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv1el")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1e7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prerj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4a0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2uajj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_42p13")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g7gd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7dlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wo57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wok22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urqc5")
}],
"loop": false,
"name": &"Strike",
"speed": 20.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lkffm"]
atlas = ExtResource("1_kcolf")
region = Rect2(224, 0, 32, 48)

[sub_resource type="CircleShape2D" id="CircleShape2D_8de3j"]
radius = 14.0

[node name="LightningStrike" type="AnimatedSprite2D"]
y_sort_enabled = true
sprite_frames = SubResource("SpriteFrames_q0dpt")
animation = &"Strike"
offset = Vector2(0, -17)
script = ExtResource("2_04k3x")
hotbar_image = SubResource("AtlasTexture_lkffm")

[node name="Area2D" type="Area2D" parent="."]
z_index = -8
y_sort_enabled = true

[node name="Collider" type="CollisionShape2D" parent="Area2D"]
y_sort_enabled = true
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_8de3j")

[node name="ColliderEnabledTime" type="Timer" parent="."]
wait_time = 0.1

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="fire" from="." to="." method="_on_fire"]
[connection signal="frame_changed" from="." to="." method="_on_frame_changed"]
[connection signal="timeout" from="ColliderEnabledTime" to="." method="_on_collider_enabled_time_timeout"]
